--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
                 data-blobity-tooltip="search input + datalist" placeholder="Argentina">
             </div>
             <datalist id="search-options">
-              <option value="Afghanistan">
-              <option value="Albania">
-              <option value="Algeria">
-              <option value="Andorra">
-              <option value="Armenia">
-              <option value="Australia">
-              <option value="Austria">
-              <option value="Azerbaijan">
-              <option value="Argentina">
+              <option value="Afghanistan"></option>
+              <option value="Albania"></option>
+              <option value="Algeria"></option>
+              <option value="Andorra"></option>
+              <option value="Armenia"></option>
+              <option value="Australia"></option>
+              <option value="Austria"></option>
+              <option value="Azerbaijan"></option>
+              <option value="Argentina"></option>
             </datalist>
 
             <fieldset data-blobity-tooltip="fieldset">
@@ -197,7 +197,7 @@
     </p>
   </footer>
 
-  <script type="module" src="index.js"></script>
+  <script type="module" src="/index.js"></script>
   <script src="https://cdn.blobity.dev/by.js?noAutoStart&licenseKey=null"></script>
 </body>
 
