--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
@@ -197,8 +197,8 @@
     </p>
   </footer>
 
+  <!-- <script type="module" src="https://cdn.blobity.dev/by.js?noAutoStart&licenseKey=null" crossOrigin="anonymous"></script> -->
   <script type="module" src="/index.js"></script>
-  <script src="https://cdn.blobity.dev/by.js?noAutoStart&licenseKey=null"></script>
 </body>
 
 </html>
